--- a/config/gui_settings.json
+++ b/config/gui_settings.json
@@ -1,7 +1,7 @@
 {
-    "mailbox": "",
-    "keywords": "",
-    "output_folder": "",
-    "outlook_folder": "",
-    "category": "Traité"
+    "mailbox": "Test informatique Lancy",
+    "keywords": "facture",
+    "output_folder": "C:/Test informatique Lancy (BAL)/Emails PDFs",
+    "outlook_folder": "\\\\Test informatique Lancy\\Boîte de réception\\Fournisseurs",
+    "category": "Succès"
 }
